Fix SENSOR UNIT text to be center-aligned in popup

--- a/styles.css
+++ b/styles.css
@@ -1421,7 +1421,7 @@ body {
     position: absolute;
     width: 71px;
     height: 15px;
-    left: calc(50% - 71px/2 + 16px);
+    left: calc(50% - 71px/2);
     top: 39px;
     font-family: 'Test Söhne';
     font-weight: 400;
@@ -1431,7 +1431,8 @@ body {
     margin: 0;
     display: flex;
     align-items: center;
-    text-align: right;
+    text-align: center;
+    justify-content: center;
 }
 
 .popup-sensor-id {
